; ModuleID = '/home/carl/AnghaBench/i3/src/extr_main.c_main_set_x11_cb.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_main.c_main_set_x11_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [41 x i8] c"Setting main X11 callback to enabled=%d\0A\00", align 1
@main_loop = common dso_local global i32 0, align 4
@xcb_prepare = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @main_set_x11_cb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @DLOG(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %3)
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i32, i32* @main_loop, align 4
  %9 = load i32, i32* @xcb_prepare, align 4
  %10 = call i32 @ev_prepare_start(i32 %8, i32 %9)
  %11 = load i32, i32* @main_loop, align 4
  %12 = load i32, i32* @xcb_prepare, align 4
  %13 = call i32 @ev_feed_event(i32 %11, i32 %12, i32 0)
  br label %18

14:                                               ; preds = %1
  %15 = load i32, i32* @main_loop, align 4
  %16 = load i32, i32* @xcb_prepare, align 4
  %17 = call i32 @ev_prepare_stop(i32 %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %7
  ret void
}

declare dso_local i32 @DLOG(i8*, i32) #1

declare dso_local i32 @ev_prepare_start(i32, i32) #1

declare dso_local i32 @ev_feed_event(i32, i32, i32) #1

declare dso_local i32 @ev_prepare_stop(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
